# collatz-experimental-data

./: .gitignore  COLLATZ_PROOF.md  COLLATZ_PROOF_FIXES.md  COLLATZ_PROOF_backup_v1.md  COLLATZ_PROOF_backup_v2.md  Cargo.toml  Collatz Ideas.md  GHOST_GEOMETRY_RELEASE.md  IME-primer.md  INVESTIGATION_SUB_THRESHOLD_LEMMA.md  LOCK1_BFLOOR_THEOREM.md  LOCK1_CRITICAL_BAND_KERNEL.md  LOCK1_FACTOR_CASCADE_BARRIER.md  LOCK1_FINAL_WALL_THEOREM.md  LOCK1_NORMALIZED_OBSTRUCTION_POLYNOMIAL.md  LOCK1_NO_LOOP_PROOF.md  LOCK1_OFFSET_BARRIER.md  LOCK1_PERIODIC_REDUCTION_LEMMA.md  LOCK1_PROOF_COMPLETION_AUDIT.md  LOCK1_ROTATION_REDUCTION_LEMMA.md  LOCK1_ROTATION_WINDOW_LEMMA.md  LOCK1_THEOREM_A_WRITEUP.md  LOCK1_THEOREM_B_WRITEUP.md  LOCK1_TRAILING2_RECURRENCE.md  LOCK2_DEMOTION_AND_WORST_WORD.md  LOCK2_RESULTS.md  LOCK3_BIRTH_INVARIANT_AUDIT.md  LOCK3_C5_M8_BREAKDOWN.md  LOCK3_CUTOFF_NUMBERS.txt  LOCK3_CUTOFF_NUMBERS_BACKWARD.txt  LOCK3_CUTOFF_NUMBERS_CNEG20_TO_C50.txt  LOCK3_INITIAL_LAUNCH_COLLAPSE_NOTE.md  LOCK3_LOCK4_RESERVE_DECAY_NOTE.md  LOCK3_PRECISION_COUNTDOWN_GRID.md  LOCK3_RESULTS.md  LOCK3_SHADOW_BIRTH_DIGIT_ANALYSIS.md  LOCK4_RESULTS.md  Lock 1 - Instructions for Codex.txt  Lock 2 - Instructions for Codex.txt  Lock 3 - Instructions for Codex.txt  (+20 more)
Lock3_support_cell_audit/: lock3_support_cell_audit.csv  lock3_support_cell_detail.csv  lock3_support_cell_summary.json
renorm_check/: IMPLEMENTATION_LEDGER.md  SUMMARY.json  SYNTHESIS.md  analyze_rho_structure.py  c_list_anchors.txt  c_list_stride4.txt  rho_m3_analysis_report.json  rho_m5_anchors_analysis_report.json  rho_sweep_m3_C1_200.csv  rho_sweep_m5_anchors.csv  run_rho_sweep.sh
rust/: lock1_backward_barrier.rs  lock1_barrier_formula_check.rs  lock1_barrier_shape_miner.rs  lock1_barrier_witness_miner.rs  lock1_cascade_survivor_dump.rs  lock1_cycle_scan.rs  lock1_delta_lemma_miner.rs  lock1_factor_cascade_miner.rs  lock1_final_wall_quotient_miner.rs  lock1_obstruction_scan.rs  lock1_primitive_necklace_cascade_miner.rs  lock1_proof_miner.rs  lock1_reflection_root_profile.rs  lock1_residue_dp_prover.rs  lock2_reverse_barrier.rs  lock2_scan.rs  lock3_census.rs  lock3_census_singlethread_backup.rs  product_automaton.rs  spectral_radius.rs  (+1 more)
(+722 files in other folders)
